--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 	<meta charset='utf-8'>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="yoga, yogi, buddha, buddhism, wellness, grateful, mindful, mindfulness, exercise, meditate, meditation, india, china, fitness, health, workout, stretch, flexible">
-  <meta name="description" content="Suzy is an RYT-200 certified yoga teacher. She also has experience teaching pilates and spin. Come on in and let's get fit!">
+	<meta name="keywords" content="yoga, yoga teacher, certified yoga teacher, yoga instructor, certified yoga instructor, vinyasa yoga, vinyasa flow, vinyasa, yogi, buddha, buddhism, wellness, grateful, mindful, mindfulness, exercise, meditate, meditation, transcendental meditiation, fitness, health, workout, yoga workout, yoga training, stretch, flexible">
+  <meta name="description" content="Suzy is an RYT-200 certified yoga instructor. Her challenging and rewarding vinyasa classes offer a chance to refresh and recharge your body. She also has experience teaching pilates and spin. Come on in and let's get fit!">
 
-  <title>@suzyogi</title>
+  <title>Home - Suzy Gordon Yoga</title>
 
   <link href='http://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
 
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">-->
   <link href="index.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 
 </head>
@@ -33,12 +33,11 @@
 	<ul>
 		<li><button class="close-menu">close &rarr;</button></li>
 		<li><h3><a href="#" class="slide-nav">home</a></h3></li>
-		<li><h3><a href="about" class="slide-nav">about</a></h3></li>
-		<li><h3><a href="testimonials" class="slide-nav">testimonials</a></h3></li>
-		<li><h3><a href="schedule" class="slide-nav">schedule</a></h3></li>
-		<li><h3><a href="gallery" class="slide-nav">gallery</a></h3></li>
-		<li><h3><a href="blog" class="slide-nav">blog</a></h3></li>
-		<li><h3><a href="contact" class="slide-nav">contact</a></h3></li>
+		<li><h3><a href="about.hmtl" class="slide-nav">about</a></h3></li>
+		<li><h3><a href="testimonials.html" class="slide-nav">testimonials</a></h3></li>
+		<li><h3><a href="schedule.html" class="slide-nav">schedule</a></h3></li>
+		<li><h3><a href="gallery.html" class="slide-nav">gallery</a></h3></li>
+		<li><h3><a href="blog.html" class="slide-nav">blog</a></h3></li>
 	</ul>
 </div>
 
@@ -52,12 +51,11 @@
 			<div id="menu" class="col-md-8">
 				<div id="name"><h1><a href="#">suzy gordon</a></h1></div>
 					<h2><a href="#" class="nav">home</a></h2>
-					<h2><a href="about" class="nav">about</a></h2>
-					<h2><a href="testimonials" class="nav">testimonials</a></h2>
-					<h2><a href="schedule" class="nav">schedule</a></h2>
-					<h2><a href="gallery" class="nav">gallery</a></h2>
-					<h2><a href="blog" class="nav">blog</a></h2>
-					<h2><a href="contact" class="nav">contact</a></h2>
+					<h2><a href="about.html" class="nav">about</a></h2>
+					<h2><a href="testimonials.html" class="nav">testimonials</a></h2>
+					<h2><a href="schedule.html" class="nav">schedule</a></h2>
+					<h2><a href="gallery.html" class="nav">gallery</a></h2>
+					<h2><a href="blog.html" class="nav">blog</a></h2>
 			</div>
 
 		<div class="col-md-3"></div>
@@ -66,7 +64,6 @@
 
 	</div>
 </div>
-
 
 <div id="about-block">
 
@@ -77,7 +74,7 @@
 	<div id="abt-txt-img">
 
 	<div id="about-text">
-		<p>Hi, I’m Suzy.<br><br>I’m a yoga teacher and a citizen of the universe.<br><br>I truly believe that by living a thoughtful life one can begin to break down the ego and its archetypes that can dull our inner light. I have found that yoga is the greatest vehicle for change. By practicing yoga and becoming sensitive to the beats and rhythms of our realms, purpose becomes blindingly obvious and a gentle guide allows us to find our sense of flow. Anyone can access the life they truly desire. My passion lies with helping people get there.<br><br>Click <a href="about.html">here</a> to learn more about me.</p>
+		<p>Hi, I’m Suzy.<br><br>I’m a yoga teacher and a citizen of the universe.<br><br>I truly believe that by living a thoughtful life one can begin to break down the ego and its archetypes that can dull our inner light. I have found that yoga is the greatest vehicle for change. By practicing yoga and becoming sensitive to the beats and rhythms of our realms, purpose becomes blindingly obvious and a gentle guide allows us to find our sense of flow. Anyone can access the life they truly desire. My passion lies with helping people get there.<br><br>Click <a href="about.html" class="link">here</a> to learn more about me.</p>
 	</div>
 
 	<div id="about-imgs">
@@ -85,7 +82,6 @@
 	</div>
 
 	</div>
-
 
 </div>
 
@@ -103,7 +99,7 @@
 		</div>
 
 		<div id="testim-text">
-			<p>"I've rarely come across a yoga teacher who can read the energy of a class and adjust the practice accordingly like Suzy. Her classes are always challenging but accessible. Suzy helps you push your limits as a yogi while always reinforcing proper form and alignment. Her positivity and kind heart round out to make her a one of a kind yoga instructor!"<br> - Camille H.<br><br>"Suzy’s teaching is what motivated me to jump on the yoga train. Her deeply rooted and intrinsic love for yoga is tangible in her teaching.  With spirited and clever classes, she has allowed me to seek out challenges and feel grounded in my practice.  She will remind you to keep your practice lighthearted and will indefinitely awaken your sense of adventure.  Suzy will turn you into one badass yogi."<br> - Chris V.<br><br>Click <a href="testimonials.html">here</a> to read more testimonials.</p>
+			<p>"I've rarely come across a yoga teacher who can read the energy of a class and adjust the practice accordingly like Suzy. Her classes are always challenging but accessible. Suzy helps you push your limits as a yogi while always reinforcing proper form and alignment. Her positivity and kind heart round out to make her a one of a kind yoga instructor!"<br> - Camille H.<br><br>"Suzy’s teaching is what motivated me to jump on the yoga train. Her deeply rooted and intrinsic love for yoga is tangible in her teaching.  With spirited and clever classes, she has allowed me to seek out challenges and feel grounded in my practice.  She will remind you to keep your practice lighthearted and will indefinitely awaken your sense of adventure.  Suzy will turn you into one badass yogi."<br> - Chris V.<br><br>Click <a href="testimonials.html" class="link">here</a> to read more testimonials.</p>
 		</div>
 
 	</div>
@@ -133,12 +129,29 @@
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur.<br><br>Click <a href="blog.html">here</a> to read more of my blog.</p>
+			cillum dolore eu fugiat nulla pariatur.<br><br>Click <a href="blog.html" class="link">here</a> to read more of my blog.</p>
 		</div>
 
 	</div>
 
 </div>
+
+<br><hr><br>
+
+<footer>
+	<div id="contact">
+		<h2>contact</h2>
+		<p>General Inquiries /<br><a href="mailto:suzy@suzyogi.com">suzy@suzyogi.com</a></p>		
+	</div>
+
+	<br><br>
+
+	<div id="copyright">
+		<p>&copy;Nicholas Tobat 2015</p>
+	</div>
+</footer>
+
+
 
 </body>
 </html>
