first crack at responsivity

--- a/blog.html
+++ b/blog.html
@@ -8,12 +8,13 @@
 	<meta name="keywords" content="yoga, yoga teacher, certified yoga teacher, yoga instructor, certified yoga instructor, vinyasa yoga, vinyasa flow, vinyasa, yogi, buddha, buddhism, wellness, grateful, mindful, mindfulness, exercise, meditate, meditation, transcendental meditiation, fitness, health, workout, yoga workout, yoga training, stretch, flexible">
   <meta name="description" content="Suzy is an RYT-200 certified yoga instructor. Her challenging and rewarding vinyasa classes offer a chance to refresh and recharge your body. She also has experience teaching pilates and spin. Come on in and let's get fit!">
 
-  <title>Class Schedule - Suzy Gordon Yoga</title>
+  <title>Blog - Suzy Gordon Yoga</title>
 
   <link href='http://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
 
   <link href="schedule.css" rel="stylesheet">
+  <link href="blog.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
@@ -50,20 +51,22 @@
 <div id="main">
 
   <div id="title">
-    <h1>Class Schedule</h1>
+    <h1>Blog</h1>
   </div>
 
   <div id="content">
-
-    <h2>Fridays:</h2>
-    <p>9:15am Vinyasa Flow @ <a href="#1" class="expand">Crunch Fitness&nbsp;&nbsp;<img src="http://i.imgur.com/1vx49dT.png" id="expand"></a></p>
-    <p class="address">Pike 7 Plaza, 8371 Leesburg Pike, Vienna, VA 22182<br>(703) 940-5700</p>
-
+    <a class="embedly-card" href="http://suzyogi.tumblr.com/post/110214395270/save-the-day-dream-nurturing-the-creative-mind">Save the Day Dream! Nurturing the creative mind.</a>
+<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
   </div>
+
 
 </div>
 
 <footer>
+
+  <!--<div id="motto">
+    <a href="suzyogi.tumblr.com"><img src="http://i.imgur.com/mG9J3OA.png" /></a>#chaseyourbliss<a href="instagram.com/suzyogi"><img src="http://i.imgur.com/mgjPnAu.png" /></a>
+  </div>-->
 
   <br><hr><br>
 
@@ -71,11 +74,7 @@
   <h2 id="quote">"Yoga is the journey of the self, through the self, to the self." - The Bhagavad Gita</h2>
   </div>
 
-  <br><hr><br>
-
-  <!--<div id="motto">
-    <span>#chaseyourbliss</span>
-  </div>-->
+  <br><hr> 
 
   <img src="http://i.imgur.com/gngFDD4.png" id="ryt" />
 
@@ -89,7 +88,9 @@
   <div id="copyright">
     <p>&copy;2015 Nicholas Tobat</p>
   </div>
+
 </footer>
+
 
 
 </body>
