--- a/gallery.html
+++ b/gallery.html
@@ -50,15 +50,11 @@
 <div id="main">
 
   <div id="title">
-    <h1>Class Schedule</h1>
+    <h1>Gallery</h1>
   </div>
 
   <div id="content">
-
-    <h2>Fridays:</h2>
-    <p>9:15am Vinyasa Flow @ <a href="#1" class="expand">Crunch Fitness&nbsp;&nbsp;<img src="http://i.imgur.com/1vx49dT.png" id="expand"></a></p>
-    <p class="address">Pike 7 Plaza, 8371 Leesburg Pike, Vienna, VA 22182<br>(703) 940-5700</p>
-
+    <h2>Coming Soon!</h2>
   </div>
 
 </div>
@@ -71,11 +67,7 @@
   <h2 id="quote">"Yoga is the journey of the self, through the self, to the self." - The Bhagavad Gita</h2>
   </div>
 
-  <br><hr><br>
-
-  <!--<div id="motto">
-    <span>#chaseyourbliss</span>
-  </div>-->
+  <br><hr> 
 
   <img src="http://i.imgur.com/gngFDD4.png" id="ryt" />
 
@@ -89,6 +81,7 @@
   <div id="copyright">
     <p>&copy;2015 Nicholas Tobat</p>
   </div>
+
 </footer>
 
 
