--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
   <link href='http://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Marck+Script' rel='stylesheet' type='text/css'>
 
   <link href="index.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 
 </head>
@@ -33,8 +34,8 @@
 	<ul>
 		<li><button class="close-menu">close &rarr;</button></li>
 		<li><h3><a href="#" class="slide-nav">home</a></h3></li>
-		<li><h3><a href="about.hmtl" class="slide-nav">about</a></h3></li>
-		<li><h3><a href="testimonials.html" class="slide-nav">testimonials</a></h3></li>
+		<li><h3><a href="about.html" class="slide-nav">about</a></h3></li>
+		<li><h3><a href="praise.html" class="slide-nav">praise</a></h3></li>
 		<li><h3><a href="schedule.html" class="slide-nav">schedule</a></h3></li>
 		<li><h3><a href="gallery.html" class="slide-nav">gallery</a></h3></li>
 		<li><h3><a href="blog.html" class="slide-nav">blog</a></h3></li>
@@ -52,7 +53,7 @@
 				<div id="name"><h1><a href="#">suzy gordon</a></h1></div>
 					<h2><a href="#" class="nav">home</a></h2>
 					<h2><a href="about.html" class="nav">about</a></h2>
-					<h2><a href="testimonials.html" class="nav">testimonials</a></h2>
+					<h2><a href="praise.html" class="nav">praise</a></h2>
 					<h2><a href="schedule.html" class="nav">schedule</a></h2>
 					<h2><a href="gallery.html" class="nav">gallery</a></h2>
 					<h2><a href="blog.html" class="nav">blog</a></h2>
@@ -84,12 +85,11 @@
 	</div>
 
 </div>
-
-
+<hr>
 <div id="testim-block">
 
 	<div id="testim-title">
-		<h1>testimonials</h1>
+		<h1>praise</h1>
 	</div>
 
 	<div id="testim-txt-img">
@@ -99,14 +99,13 @@
 		</div>
 
 		<div id="testim-text">
-			<p>"I've rarely come across a yoga teacher who can read the energy of a class and adjust the practice accordingly like Suzy. Her classes are always challenging but accessible. Suzy helps you push your limits as a yogi while always reinforcing proper form and alignment. Her positivity and kind heart round out to make her a one of a kind yoga instructor!"<br> - Camille H.<br><br>"Suzy’s teaching is what motivated me to jump on the yoga train. Her deeply rooted and intrinsic love for yoga is tangible in her teaching.  With spirited and clever classes, she has allowed me to seek out challenges and feel grounded in my practice.  She will remind you to keep your practice lighthearted and will indefinitely awaken your sense of adventure.  Suzy will turn you into one badass yogi."<br> - Chris V.<br><br>Click <a href="testimonials.html" class="link">here</a> to read more testimonials.</p>
+			<p>"I've rarely come across a yoga teacher who can read the energy of a class and adjust the practice accordingly like Suzy. Her classes are always challenging but accessible. Suzy helps you push your limits as a yogi while always reinforcing proper form and alignment. Her positivity and kind heart round out to make her a one of a kind yoga instructor!"<br> - Camille H.<br><br>"Suzy’s teaching is what motivated me to jump on the yoga train. Her deeply rooted and intrinsic love for yoga is tangible in her teaching.  With spirited and clever classes, she has allowed me to seek out challenges and feel grounded in my practice.  She will remind you to keep your practice lighthearted and will indefinitely awaken your sense of adventure.  Suzy will turn you into one badass yogi."<br> - Chris V.<br><br>Click <a href="praise.html" class="link">here</a> to read more testimonials.</p>
 		</div>
 
 	</div>
 
 </div>
-
-
+<hr>
 <div id="blog-block">
 
 	<div id="blog-title">
@@ -120,25 +119,27 @@
 		</div>
 
 		<div id="blog-text">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur.<br><br>Click <a href="blog.html" class="link">here</a> to read more of my blog.</p>
+			<br>
+			<a class="embedly-card" href="http://suzyogi.tumblr.com">Suzyogi</a>
+			<script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script><br><br>Click <a href="blog.html" class="link">here</a> to read some blog posts, or click <a href="http://suzyogi.tumblr.com" class="link">here</a> to go to my tumblr.
 		</div>
 
 	</div>
 
 </div>
 
-<br><hr><br>
-
 <footer>
+
+	<br><hr><br>
+
+	<div id="quotes">
+	<h2 id="quote">"Yoga is the journey of the self, through the self, to the self." - The Bhagavad Gita</h2>
+	</div>
+
+	<br><hr> 
+
+	<img src="http://i.imgur.com/gngFDD4.png" id="ryt" />
+
 	<div id="contact">
 		<h2>contact</h2>
 		<p>General Inquiries /<br><a href="mailto:suzy@suzyogi.com">suzy@suzyogi.com</a></p>		
@@ -147,8 +148,9 @@
 	<br><br>
 
 	<div id="copyright">
-		<p>&copy;Nicholas Tobat 2015</p>
+		<p>&copy;2015 Nicholas Tobat</p>
 	</div>
+
 </footer>
 
 
